# tree-automata

./: LICENSE  default.nix  shell.nix  stack.yaml  tree-automata.cabal
src/: NonTerm.hs  NonTerminal.hs  Terminal.hs  TreeAutomata.hs  TreeGrammar.hs  Util.hs
src/TreeAutomata/: Exp.hs  Internal.hs  Optimizations.hs  Restrictions.hs
test/: TreeAutomataSpec.hs  TreeGrammarSpec.hs
