name:                tree-automata
version:             0.1.0.0
synopsis:            Regular tree automata
-- description:
homepage:            https://github.com/svenkeidel/tree-automata.git
license:             BSD3
license-file:        LICENSE
author:              Michael D. Adams
copyright:           Michael D. Adams
maintainer:          s.keidel@tudelft.nl
category:            Web
build-type:          Simple

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
  exposed-modules:     TreeAutomata
                       TreeAutomata.Exp
  other-modules:       Util
  build-depends:       base >= 4.7 && < 5
                     , Cabal
                     , containers
                     , mtl
                     , parsec
                     , random
                     , syb
                     , text
                     , text-show
                     , deepseq
                     , hashable

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , hspec
                     , HUnit
                     , text
                     , tree-automata
  default-language:    Haskell2010
