name:                tree-automata
version:             0.1.0.0
synopsis:            Regular tree automata
-- description:
homepage:            https://github.com/svenkeidel/tree-automata.git
license:             BSD3
license-file:        LICENSE
author:              Michael D. Adams
copyright:           Michael D. Adams
maintainer:          s.keidel@tudelft.nl
category:            Web
build-type:          Simple

cabal-version:       >=1.10

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  ghc-options:         -O2
  exposed-modules:     TreeGrammar,
                       NonTerminal,
                       Terminal
  build-depends:       base >= 4.7 && < 5
                     , containers
                     , unordered-containers
                     , mtl
                     , text
                     , deepseq
                     , hashable

test-suite specs
  type:                exitcode-stdio-1.0
  ghc-options:         -Wall
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TreeGrammarSpec
  build-depends:       base
                     , containers
                     , unordered-containers
                     , hspec
                     , QuickCheck
                     , mtl
                     , text
                     , tree-automata
  default-language:    Haskell2010
